2009-03-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_plot): The quadrangles are only prepared but not
	drawn by this routine in pm3d depthorder mode, thus set_color() should
	not be called.

2009-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/canvas.trm:  set term canvas title "foo" sets the title of the
	resulting HTML output document.

2009-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Determine the vertical
	placement of text based on the average value found when the font was
	selected, rather than on the specific height of this text fragment.
	Otherwise successive fragments with different height produce an uneven
	baseline.  Bug #2661664

2009-03-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff docs/README.ja man/gnuplot-ja.1:
	Sync Japanese documentation to gnuplot.doc rev 1.562

2009-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Explicitly include $LUA_CFLAGS as reported by pkgconfig.
	Bug #2637549

	* src/axis.c (make_tics): Trap case where there were insufficient data
	to determine axis range. E.g. "set view map; set pm3d; splot {0,1};".

2009-03-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command): Replace bogus initialization of dummy_token[]
	with explicit declaration.  Bug #2657599 

	* src/datafile.c (df_set_key_columnhead) src/datafile.h src/plot2d.c
	src/plot3d.c docs/gnuplot.doc demo/datastrings.dem demo/histograms.dem
	demo/histograms2.dem:

	Document the plot option "... title columnhead{(N)}"
	Move the point where this option is parsed from df_open() to 
	eval_{3d}plots() with the rest of the title options, using a callback
	to a new routine df_set_key_columnhead().  Deprecate the original form
	of the command, "using N title N", which was undocumented but used in
	several demos.  The deprecated syntax is still accepted if configured
	with --enable-backwards-compatibility.
