@@ -1,10 +1,10 @@
 /*
- * $Id: canvasmath.js,v 1.5 2009/03/05 07:01:21 sfeam Exp $
+ * $Id: canvasmath.js,v 1.6 2009/03/24 19:03:38 sfeam Exp $
  */
 // The canvastext.js code was released to the public domain by Jim Studt, 2007.
 // He may keep some sort of up to date copy at http://www.federated.com/~jim/canvastext/
-// Feb 2009 Ethan A Merritt (EAM) Modify code to work in non-ascii environments.
-//          Add Hershey simplex Greek and math symbols with unicode indexing.
+// Mar 2009 Ethan A Merritt (EAM) Modify code to work in non-ascii environments.
+//	    Add Latin-1, Hershey simplex Greek, and math symbols with unicode indexing.
 //
 var CanvasTextFunctions = { };
 
@@ -105,6 +105,65 @@ CanvasTextFunctions.letters = {
     '}': { width: 14, points: [[5,25],[7,24],[8,23],[9,21],[9,19],[8,17],[7,16],[6,14],[6,12],[8,10],[-1,-1],[7,24],[8,22],[8,20],[7,18],[6,17],[5,15],[5,13],[6,11],[10,9],[6,7],[5,5],[5,3],[6,1],[7,0],[8,-2],[8,-4],[7,-6],[-1,-1],[8,8],[6,6],[6,4],[7,2],[8,1],[9,-1],[9,-3],[8,-5],[7,-6],[5,-7]] },
     '~': { width: 24, points: [[3,6],[3,8],[4,11],[6,12],[8,12],[10,11],[14,8],[16,7],[18,7],[20,8],[21,10],[-1,-1],[3,8],[4,10],[6,11],[8,11],[10,10],[14,7],[16,6],[18,6],[20,7],[21,10],[21,12]] },
 
+// latin-1 as diacritical + base character
+
+192: { width: 0, points: [[4,28],[10,24],[-99,'A']] },
+193: { width: 0, points: [[8,24],[14,28],[-99,'A']] },
+194: { width: 0, points: [[5,24],[9,27],[13,24],[-99,'A']] },
+195: { width: 0, points: [[4,24],[5,26],[6,27],[8,27], [10,24],[12,24],[13,25],[14,27],[-99,'A']] },
+196: { width: 0, points: [[6,25],[6,26],[7,26],[7,25],[-1,-1],[12,25],[12,26],[13,26],[13,25],[-99,'A']] },
+197: { width: 0, points: [[8,27],[6,25],[6,23],[8,21],[10,21],[12,23],[12,25],[10,27],[8,27],[-99,'A']]},
+198: { width: 11, points: [[3,0],[14,21],[-1,-1],[7,8],[14,8],[-99,'E']] },
+199: { width: 0, points: [[10,0],[10,-3],[11,-3],[12,-4],[12,-6],[11,-7],[8,-7],[-99,'C']] },
+200: { width: 0, points: [[8,28],[14,24],[-99,'E']] },
+201: { width: 0, points: [[6,24],[12,28],[-99,'E']] },
+202: { width: 0, points: [[5,24],[9,27],[13,24],[-99,'E']] },
+203: { width: 0, points: [[6,25],[6,26],[7,26],[7,25],[-1,-1],[12,25],[12,26],[13,26],[13,25],[-99,'E']] },
+204: { width: 0, points: [[-99,'I']] },
+205: { width: 0, points: [[-99,'I']] },
+206: { width: 0, points: [[-99,'I']] },
+207: { width: 0, points: [[-99,'I']] },
+209: { width: 0, points: [[6,24],[7,26],[8,27],[10,27], [12,24],[14,24],[15,25],[16,27],[-99,'N']] },
+210: { width: 0, points: [[8,28],[14,24],[-99,'O']] },
+211: { width: 0, points: [[6,24],[12,28],[-99,'O']] },
+212: { width: 0, points: [[7,24],[11,27],[15,24],[-99,'O']] },
+213: { width: 0, points: [[6,24],[7,26],[8,27],[10,27], [12,24],[14,24],[15,25],[16,27],[-99,'O']] },
+214: { width: 0, points: [[8,25],[8,26],[9,26],[9,25],[-1,-1],[14,25],[14,26],[15,26],[15,25],[-99,'O']] },
+216: { width: 0, points: [[3,0],[19,21],[-99,'O']] },
+217: { width: 0, points: [[8,28],[14,24],[-99,'U']] },
+218: { width: 0, points: [[6,24],[12,28],[-99,'U']] },
+219: { width: 0, points: [[7,24],[11,27],[15,24],[-99,'U']] },
+220: { width: 0, points: [[8,25],[8,26],[9,26],[9,25],[-1,-1],[14,25],[14,26],[15,26],[15,25],[-99,'U']] },
+224: { width: 0, points: [[8,21],[14,17],[-99,'a']] },
+225: { width: 0, points: [[6,17],[12,21],[-99,'a']] },
+226: { width: 0, points: [[5,17],[9,20],[13,17],[-99,'a']] },
+227: { width: 0, points: [[4,17],[5,19],[6,20],[8,20], [10,17],[12,17],[13,18],[14,20],[-99,'a']] },
+228: { width: 0, points: [[6,18],[6,19],[7,19],[7,18],[-1,-1],[12,18],[12,19],[13,19],[13,18],[-99,'a']] },
+229: { width: 0, points: [[9,21],[7,19],[7,18],[9,16],[10,16],[12,18],[12,19],[10,21],[8,21],[-99,'a']] },
+231: { width: 0, points: [[10,0],[10,-3],[11,-3],[12,-4],[12,-6],[11,-7],[8,-7],[-99,'c']] },
+232: { width: 0, points: [[8,21],[14,17],[-99,'e']] },
+233: { width: 0, points: [[6,17],[12,21],[-99,'e']] },
+234: { width: 0, points: [[5,17],[9,20],[13,17],[-99,'e']] },
+235: { width: 0, points: [[6,18],[6,19],[7,19],[7,18],[-1,-1],[12,18],[12,19],[13,19],[13,18],[-99,'e']] },
+236: { width: 8, points: [[4,14],[4,0],[-1,-1],[1,21],[4,18]] },
+237: { width: 8, points: [[4,14],[4,0],[-1,-1],[7,21],[4,18]] },
+238: { width: 8, points: [[4,14],[4,0],[-1,-1],[1,17],[4,20],[7,17]] },
+239: { width: 10, points: [[5,14],[5,0],[-1,-1],[2,18],[2,19],[3,19],[3,18],[-1,-1],[7,18],[7,19],[8,19],[8,18]] },
+241: { width: 0, points: [[5,17],[6,19],[7,20],[9,20], [11,17],[13,17],[14,18],[15,20],[-99,'n']] },
+242: { width: 0, points: [[8,21],[14,17],[-99,'o']] },
+243: { width: 0, points: [[6,17],[12,21],[-99,'o']] },
+244: { width: 0, points: [[5,17],[9,20],[13,17],[-99,'o']] },
+245: { width: 0, points: [[4,17],[5,19],[6,20],[8,20], [10,17],[12,17],[13,18],[14,20],[-99,'o']] },
+246: { width: 0, points: [[6,18],[6,19],[7,19],[7,18],[-1,-1],[12,18],[12,19],[13,19],[13,18],[-99,'o']] },
+247: { width: 20, points: [[4,9],[16,9],[-1,-1],[10,14],[10,13],[11,13],[11,14],[-1,-1],[10,4],[10,5],[11,5],[11,4]] },
+248: { width: 0, points: [[3,0],[17,14],[-99,'o']] },
+249: { width: 0, points: [[8,21],[14,17],[-99,'u']] },
+250: { width: 0, points: [[6,17],[12,21],[-99,'u']] },
+251: { width: 0, points: [[5,17],[9,20],[13,17],[-99,'u']] },
+252: { width: 0, points: [[6,18],[6,19],[7,19],[7,18],[-1,-1],[12,18],[12,19],[13,19],[13,18],[-99,'u']] },
+253: { width: 0, points: [[12,21],[6,17],[-99,'y']] },
+255: { width: 0, points: [[6,18],[6,19],[7,19],[7,18],[-1,-1],[12,18],[12,19],[13,19],[13,18],[-99,'y']] },
+
 // Hershey simplex greek font
 
 913: { width: 18, points: [[9,22],[1,1],[-1,-1],[9,22],[17,1],[-1,-1],[4,8],[14,8]] },
@@ -160,6 +219,7 @@ CanvasTextFunctions.letters = {
 969: { width: 23, points: [[8,15],[6,14],[4,11],[3,8],[3,5],[4,2],[5,1],[7,1],[9,2],[11,5],[-1,-1],[12,9],[11,5],[12,2],[13,1],[15,1],[17,2],[19,5],[20,8],[20,11],[19,14],[18,15]] },
 977: { width: 21, points: [[1,11],[2,13],[4,15],[6,15],[7,14],[7,12],[6,7],[6,4],[7,2],[8,1],[10,1],[12,2],[14,5],[15,7],[16,10],[17,15],[17,18],[16,21],[14,22],[12,22],[11,20],[11,18],[12,15],[14,12],[16,10],[19,8]] },
 981: { width: 20, points: [[14,22],[6,-6],[-1,-1],[9,15],[6,14],[4,12],[3,9],[3,6],[4,4],[6,2],[9,1],[11,1],[14,2],[16,4],[17,7],[17,10],[16,12],[14,14],[11,15],[9,15]] },
+982: { width: 23, points: [[9,14],[6,13],[4,11],[3,8],[3,5],[4,2],[5,1],[7,1],[9,2],[11,5],[-1,-1],[12,9],[11,5],[12,2],[13,1],[15,1],[17,2],[19,5],[20,8],[20,11],[19,14],[18,15],[-1,-1],[2,14],[4,15],[20,15]] },
 986: { width: 18, points: [[15,13],[14,14],[11,15],[8,15],[5,14],[4,13],[3,11],[3,9],[4,7],[6,5],[10,2],[11,0],[11,-2],[10,-3],[8,-3]] },
 
 // Hershey math symbols
@@ -170,7 +230,6 @@ CanvasTextFunctions.letters = {
 8594: { width: 26, points: [[19,12],[22,10],[19,8],[-1,-1],[16,15],[21,10],[16,5],[-1,-1],[4,10],[21,10]] },
 8595: { width: 16, points: [[6,4],[8,1],[10,4],[-1,-1],[3,7],[8,2],[13,7],[-1,-1],[8,19],[8,2]] },
 8706: { width: 19, points: [[15,10],[14,13],[13,14],[11,15],[9,15],[6,14],[4,11],[3,8],[3,5],[4,3],[5,2],[7,1],[9,1],[12,2],[14,4],[15,7],[16,12],[16,17],[15,20],[14,21],[12,22],[9,22],[7,21],[6,20],[6,19],[7,19],[7,20],[-1,-1],[9,15],[7,14],[5,11],[4,8],[4,4],[5,2],[-1,-1],[9,1],[11,2],[13,4],[14,7],[15,12],[15,17],[14,20],[12,22]] },
-8707: { width: 19, points: [[15,22],[15,1],[-1,-1],[2,22],[15,22],[-1,-1],[7,12],[15,12],[-1,-1],[2,1],[15,1]] },
 8710: { width: 20, points: [[2,1],[10,22],[-1,-1],[17,1],[10,20],[-1,-1],[18,1],[10,22],[-1,-1],[2,1],[18,1],[-1,-1],[3,2],[17,2]] },
 8711: { width: 20, points: [[2,22],[10,1],[-1,-1],[3,22],[10,3],[-1,-1],[18,22],[10,1],[-1,-1],[2,22],[18,22],[-1,-1],[3,21],[17,21]] },
 8712: { width: 24, points: [[20,18],[13,18],[9,17],[7,16],[5,14],[4,11],[4,9],[5,6],[7,4],[9,3],[13,2],[20,2],[-1,-1],[4,10],[16,10]] },
@@ -188,19 +247,26 @@ CanvasTextFunctions.letters = {
 8800: { width: 24, points: [[18,19],[6,1],[-1,-1],[3,12],[20,12],[-1,-1],[3,6],[20,6]] },
 8834: { width: 24, points: [[20,18],[13,18],[9,17],[7,16],[5,14],[4,11],[4,9],[5,6],[7,4],[9,3],[13,2],[20,2]] },
 8835: { width: 24, points: [[4,18],[11,18],[15,17],[17,16],[19,14],[20,11],[20,9],[19,6],[17,4],[15,3],[11,2],[4,2]] },
+8853: { width: 20, points: [[9,17],[6,16],[4,14],[3,11],[3,9],[4,6],[6,4],[9,3],[11,3],[14,4],[16,6],[17,9],[17,11],[16,14],[14,16],[11,17],[9,17],[-1,-1],[5,10],[15,10],[-1,-1],[10,5],[10,15]] },
+8855: { width: 20, points: [[9,17],[6,16],[4,14],[3,11],[3,9],[4,6],[6,4],[9,3],[11,3],[14,4],[16,6],[17,9],[17,11],[16,14],[14,16],[11,17],[9,17],[-1,-1],[6,6],[14,14],[-1,-1],[14,6],[6,14]] },
+8857: { width: 20, points: [[9,17],[6,16],[4,14],[3,11],[3,9],[4,6],[6,4],[9,3],[11,3],[14,4],[16,6],[17,9],[17,11],[16,14],[14,16],[11,17],[9,17],[-1,-1],[10,11],[9,10],[10,9],[11,10],[10,11]] },
 9737: { width: 27, points: [[12,22],[9,21],[6,19],[4,16],[3,13],[3,10],[4,7],[6,4],[9,2],[12,1],[15,1],[18,2],[21,4],[23,7],[24,10],[24,13],[23,16],[21,19],[18,21],[15,22],[12,22],[-1,-1],[13,13],[12,12],[12,11],[13,10],[14,10],[15,11],[15,12],[14,13],[13,13],[-1,-1],[13,12],[13,11],[14,11],[14,12],[13,12]] },
 
 // Miscellaneous glyphs (EAM)
 
 176: { width: 14, points: [[6,22],[4,21],[3,19],[3,17],[4,15],[6,14],[8,14],[10,15],[11,17],[11,19],[10,21],[8,22],[6,22]] },
+177: { width: 20, points: [[10,15],[10,5],[-1,-1],[4,10],[16,10],[-1,-1],[4,2],[16,2]] },
+181: { width: 0, points: [[-99,956]] },
 183: { width: 10, points: [[5,11],[4,10],[5,9],[6,10],[5,11]] },
-197: { width: 18, points: [[1,0],[8,17],[10,17],[17,0],[-1,-1],[4,7],[14,7],[-1,-1], [8,22],[6,20],[6,18],[8,16],[10,16],[12,18],[12,20],[10,22],[8,22]]},
 215: { width: 20, points: [[4,16],[16,4],[-1,-1],[4,4],[16,16]] },
 402: { width: 15, points: [[15,21],[14,20],[15,19],[16,20],[16,21],[15,22],[13,22],[11,21],[10,20],[9,18],[8,15],[5,1],[4,-3],[3,-5],[-1,-1],[13,22],[11,20],[10,18],[9,14],[7,5],[6,1],[5,-2],[4,-4],[3,-5],[1,-6],[-1,-6],[-2,-5],[-2,-4],[-1,-3],[0,-4],[-1,-5],[-1,-1],[4,15],[14,15]] },
+8242: { width: 8, points: [[5,24],[3,16],[-1,-1],[3,16],[6,24]] },
+8243: { width: 11, points: [[4,24],[2,16],[-1,-1],[2,16],[5,24],[-1,-1],[9,24],[7,16],[-1,-1],[7,16],[10,24]] },
 8463: { width: 21, points: [[9,22],[3,1],[-1,-1],[5,7],[7,11],[9,13],[11,14],[13,14],[15,14],[16,12],[16,10],[14,5],[14,2],[15,1],[19,3],[-1,-1],[7,21],[9,22],[-1,-1],[4,15],[14,20]] },
+8491: { width: 0, points: [[-99,197]] },
 8495: { width: 18, points: [[4,6],[8,7],[11,8],[14,10],[15,12],[14,14],[12,15],[9,15],[6,14],[4,11],[3,8],[3,5],[4,3],[5,2],[7,1],[9,1],[12,2],[14,4],[-1,-1],[9,15],[7,14],[5,11],[4,8],[4,4],[5,2]] },
 
-// Empty box (used to indicate missing glyph)
+// Used to indicate missing glyph
 129: { width: 18, points: [[2,-2],[2,21],[16,21],[16,-2],[2,-2]] }
 };
 
@@ -232,7 +298,7 @@ CanvasTextFunctions.measure = function( font, size, str)
     var len = str.length;
 
     for ( i = 0; i < len; i++) {
-        var index = str.charAt(i);
+	var index = str.charAt(i);
 	// EAM deal with non-ascii characaters
 	if (index > '~')
 	    index = str.charCodeAt(i);
@@ -248,16 +314,24 @@ CanvasTextFunctions.draw = function(ctx,font,size,x,y,str)
     var total = 0;
     var len = str.length;
     var mag = size / 25.0;
+    var composite = 0;
 
     ctx.save();
     ctx.lineCap = "round";
     ctx.lineWidth = 2.0 * mag;
 
     for ( i = 0; i < len; i++) {
-        var index = str.charAt(i);
+	var index = str.charAt(i);
+
 	// EAM deal with non-ascii characaters
 	if (index > '~')
 	    index = str.charCodeAt(i);
+
+	// EAM allow composing characters
+	if (composite != 0) {
+	    index = composite;
+	    composite = 0;
+	}
 
 	var c = CanvasTextFunctions.letter(index);
 	if ( !c) continue;
@@ -271,6 +345,11 @@ CanvasTextFunctions.draw = function(ctx,font,size,x,y,str)
 	    if ( a[0] == -1 && a[1] == -1) {
 		penUp = 1;
 		continue;
+	    }
+	    if ( a[0] == -99 ) {
+		composite = a[1];
+		i--;
+		break;
 	    }
 	    if ( penUp) {
 		ctx.moveTo( x + a[0]*mag, y - a[1]*mag);
