@@ -1,3 +1,8 @@
+2009-03-24  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/js/canvasmath.js: Fill in most of the iso 8859-1 (Latin-1)
+	character set and add a few more math symbols.
+
 2009-03-24  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/pm3d.c (pm3d_plot): The quadrangles are only prepared but not
